Changed Cosium to v5.1 [#1740]