@@ -25,7 +25,6 @@ import static junit.framework.TestCase.assertTrue;
 import com.github.springtestdbunit.DbUnitTestExecutionListener;
 import com.github.springtestdbunit.annotation.DatabaseSetup;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.comixedproject.model.comicbooks.ComicDetail;
 import org.comixedproject.repositories.RepositoryContext;
 import org.junit.Test;
@@ -93,10 +92,6 @@ public class ComicDetailRepositoryTest {
   public void testUnscrapedComicDetails() {
     List<ComicDetail> result = repository.findAll();
 
-    assertFalse(
-        result.stream()
-            .filter(entry -> entry.getUnscraped())
-            .collect(Collectors.toList())
-            .isEmpty());
+    assertFalse(result.stream().filter(entry -> entry.getUnscraped()).toList().isEmpty());
   }
 }
