@@ -22,7 +22,6 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.log4j.Log4j2;
 import org.comixedproject.messaging.PublishingException;
 import org.comixedproject.messaging.comicbooks.PublishComicBookSelectionStateAction;
@@ -120,7 +119,7 @@ public class ComicBookSelectionService {
     final List selectedIds =
         this.comicDetailService.findAllByExample(example).stream()
             .map(ComicDetail::getComicId)
-            .collect(Collectors.toList());
+            .toList();
     if (adding) {
       log.debug("Adding {} selection{}", selections.size(), selectedIds.size() == 1 ? "" : "s");
       selections.addAll(selectedIds);
@@ -161,10 +160,7 @@ public class ComicBookSelectionService {
       try {
         final List result = this.objectMapper.readValue(storeSelections.toString(), List.class);
         // Jackson unmarshalls the elements as Integer, so we need to adjust them
-        return (List)
-            result.stream()
-                .map(entry -> ((Integer) entry).longValue())
-                .collect(Collectors.toList());
+        return (List) result.stream().map(entry -> ((Integer) entry).longValue()).toList();
       } catch (JsonProcessingException error) {
         throw new ComicBookSelectionException("failed to load selections from session", error);
       }
@@ -210,7 +206,7 @@ public class ComicBookSelectionService {
         this.comicDetailService.getAllComicsForTag(tagType, tagValue, null, false).stream()
             .map(ComicDetail::getComicId)
             .filter(id -> !selections.contains(id))
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   public void removeByTagTypeAndValue(
@@ -218,6 +214,6 @@ public class ComicBookSelectionService {
     selections.removeAll(
         this.comicDetailService.getAllComicsForTag(tagType, tagValue, null, false).stream()
             .map(ComicDetail::getComicId)
-            .collect(Collectors.toList()));
+            .toList());
   }
 }
